# dzk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
dzk/: producer.py
tests/: conftest.py  test_dzk.py
