[tool.poetry]
name = "dzk"
version = "0.1.0"
description = ""
authors = ["antonio-one <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docker = "^5.0.0"
Faker = "^8.12.1"
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.7b0"
pre-commit = "^2.14.0"
pytest-env = "^0.6.2"
pdbpp = "^0.10.3"
tqdm = "^4.62.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "component: abc",
    "integration: abc",
    "unit: abc",
    "debug: abc",
    ]
